# BELLS-O

./: .env_template  .gitignore  .gitmodules  README.md  first_run.ipynb  playground.ipynb  pyproject.toml  run_all_hf.sh  run_all_hf.sh.template  run_all_local_jailbreak.sh.template  run_all_rest.sh.template  run_all_rest_content.sh.template  run_all_rest_jailbreak.template  run_eval.py  run_evals.py  sanity_check.ipynb  sanity_check_rest.ipynb
src/bells_o/: README.md  common.py  evaluator.py  pyproject.toml
src/bells_o/bells_o/: __init__.py  common.py  evaluator.py
src/bells_o/bells_o/dataset/: dataset.py
src/bells_o/bells_o/datasets/: __init__.py  dataset.py  huggingface.py
src/bells_o/bells_o/mappers/: __init__.py  xguard_mapper.py
src/bells_o/bells_o/preprocessors/: __init__.py  preprocessing.py  role_wrapper.py
src/bells_o/bells_o/result_mappers/: __init__.py  bedrock_guardrail_mapper.py  gemini_classification_mapper.py  gemini_moderation_mapper.py  lakeraguard_mapper.py  text_classification_mapper.py  vertex_moderation_mapper.py  virtue_guard_mapper.py
src/bells_o/bells_o/resultmappers/: __init__.py  lakeraguard_mapper.py  openai_moderation_mapper.py  xguard_mapper.py
src/bells_o/bells_o/supervisees/: supervisee.py
src/bells_o/bells_o/supervisors/: __init__.py  supervisor.py
src/bells_o/bells_o/supervisors/huggingface/: __init__.py  auto_model.py  custom_model.py
src/bells_o/bells_o/supervisors/rest/: __init__.py  auto_endpoint.py  auto_endpoint.pyi  custom_endpoint.py
src/bells_o/datasets/: huggingface.py
src/bells_o/preprocessors/: __init__.py  preprocessing.py  role_wrapper.py  template_wrapper.py
src/bells_o/result_mappers/: __init__.py  aegis_mapper.py  anthropic_classification_mapper.py  anthropic_one_mapper.py  azure_analyze_text_mapper.py  azure_prompt_shield_mapper.py  gemini_one_mapper.py  gpt_oss_local_one_mapper.py  granite_33_mapper.py  lakeraguard_mapper.py  lionguard_mapper.py  llama_guard_4_rest_mapper.py  logit_compare_mapper.py  nemotron_mapper.py  neuraltrust_trustgate_mapper.py  one_mapper.py  openai_compatible_one_mapper.py  openai_compatible_unsafe_mapper.py  openai_moderation_mapper.py  protectai_llm_guard_mapper.py  qwen3guard_mapper.py  shieldgemma_mapper.py  thinkguard_mapper.py  unsafe_mapper.py  wildguard_mapper.py  xguard_mapper.py  yes_mapper.py
src/bells_o/supervisors/: __init__.py  default_prompts.py  supervisor.py
src/bells_o/supervisors/custom/: __init__.py  auto_model.py  custom_supervisor.py  protectai_llm_guard.py
src/bells_o/supervisors/custom/protectai/: __init__.py  protectai_llm_guard.py
src/bells_o/supervisors/huggingface/: __init__.py  auto_model.py  custom_model.py  hf_supervisor.py
src/bells_o/supervisors/huggingface/qwen/: __init__.py  (+1 more)
src/bells_o/supervisors/rest/: __init__.py  auto_endpoint.py  auto_endpoint.pyi  rest_supervisor.py
(+954 files in other folders)
