[project]
name = "bells-o"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Michalak", email = "felix@michalax.de" },
    { name = "Leonhard Waibl", email = "leonhardwaibl@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "peft>=0.18.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyter", "dotenv"]
vllm = ["vllm>=0.11.0"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "I", "N", "W", "D", "C"]
lint.ignore = ["E501", "D107", "D213"]
# lint.ignore = ["D203", "D213", "E501", "D107", "D102", "N812", "N806"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
